--- a/OdysseyRegistration/OdysseyMvc2024/OdysseyMvc2024.csproj
+++ b/OdysseyRegistration/OdysseyMvc2024/OdysseyMvc2024.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="ElmahCore" Version="2.1.2" />
     <PackageReference Include="Microsoft.AspNetCore.SystemWebAdapters.CoreServices" Version="1.4.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.8" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.8" />
@@ -15,7 +16,6 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Yarp.ReverseProxy" Version="2.2.0" />
-    <PackageReference Include="elmah.corelibrary" Version="1.2.2" />
   </ItemGroup>
 
 </Project>
