--- a/OdysseyRegistration/OdysseyMvc2024/appsettings.json
+++ b/OdysseyRegistration/OdysseyMvc2024/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "OdysseyEntities": "Server=localhost;Database=DB_12824_registration;User Id=sa;Password=;"
+    "OdysseyEntities": "Server=localhost;Database=DB_12824_registration;User Id=sa;Password=;TrustServerCertificate=True;"
   },
   "AllowedHosts": "*",
   "ProxyTo": ""
