--- a/OdysseyRegistration/OdysseyCoreMvc/OdysseyCoreMvc.csproj
+++ b/OdysseyRegistration/OdysseyCoreMvc/OdysseyCoreMvc.csproj
@@ -1,7 +1,7 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFramework>net9.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <UserSecretsId>dadc903f-d039-4423-b71f-96328d63299b</UserSecretsId>
