--- a/OdysseyRegistration/docker-compose.yml
+++ b/OdysseyRegistration/docker-compose.yml
@@ -1,15 +1,18 @@
 volumes:
   sqlserver_odyssey:
+  sqlserver_backup:
 
 services:
   odysseyregistrationwebapi:
     image: ${DOCKER_REGISTRY-}odysseyregistrationwebapi
+    container_name: webapi
     build:
       context: .
       dockerfile: OdysseyRegistrationWebApi/Dockerfile
 
   sqlserver:
     image: mcr.microsoft.com/mssql/server:2022-latest
+    container_name: sqlserver
     environment:
       MSSQL_SA_PASSWORD_FILE: /run/secrets/sa_password
       ACCEPT_EULA: "Y"
@@ -22,6 +25,7 @@ services:
     volumes:
       - ./init:/docker-entrypoint-initdb.d
       - sqlserver_odyssey:/var/opt/mssql
+      - sqlserver_backup:/var/opt/mssql/backup
     restart: always
     healthcheck:
       test: ["CMD-SHELL", "/opt/mssql-tools18/bin/sqlcmd -S localhost -U sa -P $$(cat /run/secrets/sa_password) -Q 'SELECT 1' || exit 1"]
@@ -32,6 +36,7 @@ services:
 
   sqlserver.configurator:
     image: mcr.microsoft.com/mssql/server:2022-latest
+    container_name: sqlserver.configurator
     environment:
       CONFIG_EDGE_BUILD: 0
       MSSQL_SA_PASSWORD_FILE: /run/secrets/sa_password
