--- a/OdysseyRegistration/OdysseyMvc4/Web.config
+++ b/OdysseyRegistration/OdysseyMvc4/Web.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=152368
@@ -6,41 +6,41 @@
 <configuration>
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
-    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=4.4.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=4.4.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false"/>
     <sectionGroup name="elmah">
-      <section name="security" requirePermission="false" type="Elmah.SecuritySectionHandler, Elmah" />
-      <section name="errorLog" requirePermission="false" type="Elmah.ErrorLogSectionHandler, Elmah" />
-      <section name="errorMail" requirePermission="false" type="Elmah.ErrorMailSectionHandler, Elmah" />
-      <section name="errorFilter" requirePermission="false" type="Elmah.ErrorFilterSectionHandler, Elmah" />
+      <section name="security" requirePermission="false" type="Elmah.SecuritySectionHandler, Elmah"/>
+      <section name="errorLog" requirePermission="false" type="Elmah.ErrorLogSectionHandler, Elmah"/>
+      <section name="errorMail" requirePermission="false" type="Elmah.ErrorMailSectionHandler, Elmah"/>
+      <section name="errorFilter" requirePermission="false" type="Elmah.ErrorFilterSectionHandler, Elmah"/>
     </sectionGroup>
   </configSections>
   <!-- elmah.xsd came from http://code.google.com/p/elmah/issues/detail?id=239 -->
   <elmah xmlns="http://Elmah.Configuration">
-    <security allowRemoteAccess="true" />
-    <errorLog type="Elmah.SqlErrorLog, Elmah" connectionString="Data Source=s06.winhost.com;Initial Catalog=DB_12824_elmah;User ID=DB_12824_elmah_user;Password=;Integrated Security=False" />
+    <security allowRemoteAccess="true"/>
+    <errorLog type="Elmah.SqlErrorLog, Elmah" connectionString="Data Source=s06.winhost.com;Initial Catalog=DB_12824_elmah;User ID=DB_12824_elmah_user;Password=;Integrated Security=False"/>
     <!--<errorLog type="Elmah.SqlErrorLog, Elmah" connectionString="Data Source=s06.winhost.com;Initial Catalog=DB_27415_elmah;User ID=DB_27415_elmah_user;Password=;Integrated Security=False" />-->
   </elmah>
   <connectionStrings>
     <!--<add name="DefaultConnection" providerName="System.Data.SqlClient" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-OdysseyMvc4-20130925190747;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-OdysseyMvc4-20130925190747.mdf" />-->
-    <add name="TestOdysseyEntities" connectionString="metadata=res://*/Models.OdysseyModel.csdl|res://*/Models.OdysseyModel.ssdl|res://*/Models.OdysseyModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=s06.winhost.com;initial catalog=DB_12824_test;persist security info=True;user id=DB_12824_test_user;password=;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <add name="NovaNorthOdysseyEntities" connectionString="metadata=res://*/Models.OdysseyModel.csdl|res://*/Models.OdysseyModel.ssdl|res://*/Models.OdysseyModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=s06.winhost.com;initial catalog=DB_12824_registration;persist security info=True;user id=DB_12824_registration_user;password=;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <add name="OdysseyEntities" connectionString="metadata=res://*/Models.OdysseyModel.csdl|res://*/Models.OdysseyModel.ssdl|res://*/Models.OdysseyModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=s06.winhost.com;Initial Catalog=DB_12824_registration;Persist Security Info=True;User ID=DB_12824_registration_user;Password=;MultipleActiveResultSets=True;Application Name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <add name="NovaSouthOdysseyEntities" connectionString="metadata=res://*/Models.OdysseyModel.csdl|res://*/Models.OdysseyModel.ssdl|res://*/Models.OdysseyModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=s06.winhost.com;initial catalog=DB_27415_registration;persist security info=True;user id=DB_27415_registration_user;password=;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <!--<add name="OdysseyEntities" connectionString="metadata=res://*/Models.OdysseyModel.csdl|res://*/Models.OdysseyModel.ssdl|res://*/Models.OdysseyModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=s06.winhost.com;initial catalog=DB_27415_registration;persist security info=True;user id=DB_27415_registration_user;password=;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
+    <add name="TestOdysseyEntities" connectionString="metadata=res://*/Models.OdysseyModel.csdl|res://*/Models.OdysseyModel.ssdl|res://*/Models.OdysseyModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=s06.winhost.com;initial catalog=DB_12824_test;persist security info=True;user id=DB_12824_test_user;password=;MultipleActiveResultSets=True;Encrypt=False;App=EntityFramework&quot;" providerName="System.Data.EntityClient"/>
+    <add name="NovaNorthOdysseyEntities" connectionString="metadata=res://*/Models.OdysseyModel.csdl|res://*/Models.OdysseyModel.ssdl|res://*/Models.OdysseyModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=s06.winhost.com;initial catalog=DB_12824_registration;persist security info=True;user id=DB_12824_registration_user;password=;MultipleActiveResultSets=True;Encrypt=False;App=EntityFramework&quot;" providerName="System.Data.EntityClient"/>
+    <add name="OdysseyEntities" connectionString="metadata=res://*/Models.OdysseyModel.csdl|res://*/Models.OdysseyModel.ssdl|res://*/Models.OdysseyModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=localhost;Initial Catalog=DB_12824_registration;Persist Security Info=True;User ID=sa;Password=;MultipleActiveResultSets=True;Encrypt=False;Application Name=EntityFramework&quot;" providerName="System.Data.EntityClient"/>
+    <add name="NovaSouthOdysseyEntities" connectionString="metadata=res://*/Models.OdysseyModel.csdl|res://*/Models.OdysseyModel.ssdl|res://*/Models.OdysseyModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=s06.winhost.com;initial catalog=DB_27415_registration;persist security info=True;user id=DB_27415_registration_user;password=;MultipleActiveResultSets=True;Encrypt=False;App=EntityFramework&quot;" providerName="System.Data.EntityClient"/>
+    <!--<add name="OdysseyEntities" connectionString="metadata=res://*/Models.OdysseyModel.csdl|res://*/Models.OdysseyModel.ssdl|res://*/Models.OdysseyModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=s06.winhost.com;initial catalog=DB_27415_registration;persist security info=True;user id=DB_27415_registration_user;password=;MultipleActiveResultSets=True;Encrypt=False;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
   </connectionStrings>
   <appSettings>
-    <add key="webpages:Version" value="2.0.0.0" />
-    <add key="webpages:Enabled" value="false" />
-    <add key="PreserveLoginUrl" value="true" />
-    <add key="ClientValidationEnabled" value="true" />
-    <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-    <add key="elmah.mvc.disableHandler" value="false" />
-    <add key="elmah.mvc.disableHandleErrorFilter" value="false" />
-    <add key="elmah.mvc.requiresAuthentication" value="false" />
-    <add key="elmah.mvc.IgnoreDefaultRoute" value="false" />
-    <add key="elmah.mvc.allowedRoles" value="*" />
-    <add key="elmah.mvc.allowedUsers" value="*" />
-    <add key="elmah.mvc.route" value="elmah" />
+    <add key="webpages:Version" value="2.0.0.0"/>
+    <add key="webpages:Enabled" value="false"/>
+    <add key="PreserveLoginUrl" value="true"/>
+    <add key="ClientValidationEnabled" value="true"/>
+    <add key="UnobtrusiveJavaScriptEnabled" value="true"/>
+    <add key="elmah.mvc.disableHandler" value="false"/>
+    <add key="elmah.mvc.disableHandleErrorFilter" value="false"/>
+    <add key="elmah.mvc.requiresAuthentication" value="false"/>
+    <add key="elmah.mvc.IgnoreDefaultRoute" value="false"/>
+    <add key="elmah.mvc.allowedRoles" value="*"/>
+    <add key="elmah.mvc.allowedUsers" value="*"/>
+    <add key="elmah.mvc.route" value="elmah"/>
   </appSettings>
   <!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
@@ -53,36 +53,36 @@
   <system.web>
     <compilation targetFramework="4.8">
       <assemblies>
-        <add assembly="System.Data.Entity, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+        <add assembly="System.Data.Entity, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089"/>
       </assemblies>
     </compilation>
     <authentication mode="Forms">
-      <forms loginUrl="~/Account/Login" timeout="2880" />
+      <forms loginUrl="~/Account/Login" timeout="2880"/>
     </authentication>
     <pages controlRenderingCompatibilityVersion="4.0">
       <namespaces>
-        <add namespace="System.Web.Helpers" />
-        <add namespace="System.Web.Mvc" />
-        <add namespace="System.Web.Mvc.Ajax" />
-        <add namespace="System.Web.Mvc.Html" />
-        <add namespace="System.Web.Optimization" />
-        <add namespace="System.Web.Routing" />
-        <add namespace="System.Web.WebPages" />
+        <add namespace="System.Web.Helpers"/>
+        <add namespace="System.Web.Mvc"/>
+        <add namespace="System.Web.Mvc.Ajax"/>
+        <add namespace="System.Web.Mvc.Html"/>
+        <add namespace="System.Web.Optimization"/>
+        <add namespace="System.Web.Routing"/>
+        <add namespace="System.Web.WebPages"/>
       </namespaces>
     </pages>
     <profile defaultProvider="DefaultProfileProvider">
       <providers>
-        <add name="DefaultProfileProvider" type="System.Web.Providers.DefaultProfileProvider, System.Web.Providers, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" connectionStringName="DefaultConnection" applicationName="/" />
+        <add name="DefaultProfileProvider" type="System.Web.Providers.DefaultProfileProvider, System.Web.Providers, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" connectionStringName="DefaultConnection" applicationName="/"/>
       </providers>
     </profile>
     <membership defaultProvider="DefaultMembershipProvider">
       <providers>
-        <add name="DefaultMembershipProvider" type="System.Web.Providers.DefaultMembershipProvider, System.Web.Providers, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" connectionStringName="DefaultConnection" enablePasswordRetrieval="false" enablePasswordReset="true" requiresQuestionAndAnswer="false" requiresUniqueEmail="false" maxInvalidPasswordAttempts="5" minRequiredPasswordLength="6" minRequiredNonalphanumericCharacters="0" passwordAttemptWindow="10" applicationName="/" />
+        <add name="DefaultMembershipProvider" type="System.Web.Providers.DefaultMembershipProvider, System.Web.Providers, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" connectionStringName="DefaultConnection" enablePasswordRetrieval="false" enablePasswordReset="true" requiresQuestionAndAnswer="false" requiresUniqueEmail="false" maxInvalidPasswordAttempts="5" minRequiredPasswordLength="6" minRequiredNonalphanumericCharacters="0" passwordAttemptWindow="10" applicationName="/"/>
       </providers>
     </membership>
     <roleManager defaultProvider="DefaultRoleProvider">
       <providers>
-        <add name="DefaultRoleProvider" type="System.Web.Providers.DefaultRoleProvider, System.Web.Providers, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" connectionStringName="DefaultConnection" applicationName="/" />
+        <add name="DefaultRoleProvider" type="System.Web.Providers.DefaultRoleProvider, System.Web.Providers, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" connectionStringName="DefaultConnection" applicationName="/"/>
       </providers>
     </roleManager>
     <!--
@@ -93,63 +93,63 @@
       -->
     <sessionState mode="InProc" customProvider="DefaultSessionProvider">
       <providers>
-        <add name="DefaultSessionProvider" type="System.Web.Providers.DefaultSessionStateProvider, System.Web.Providers, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" connectionStringName="DefaultConnection" />
+        <add name="DefaultSessionProvider" type="System.Web.Providers.DefaultSessionStateProvider, System.Web.Providers, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" connectionStringName="DefaultConnection"/>
       </providers>
     </sessionState>
     <httpModules>
-      <add name="ErrorLog" type="Elmah.ErrorLogModule, Elmah" />
-      <add name="ErrorMail" type="Elmah.ErrorMailModule, Elmah" />
-      <add name="ErrorFilter" type="Elmah.ErrorFilterModule, Elmah" />
+      <add name="ErrorLog" type="Elmah.ErrorLogModule, Elmah"/>
+      <add name="ErrorMail" type="Elmah.ErrorMailModule, Elmah"/>
+      <add name="ErrorFilter" type="Elmah.ErrorFilterModule, Elmah"/>
     </httpModules>
   </system.web>
   <system.webServer>
-    <validation validateIntegratedModeConfiguration="false" />
+    <validation validateIntegratedModeConfiguration="false"/>
     <modules runAllManagedModulesForAllRequests="true">
-      <add name="ErrorLog" type="Elmah.ErrorLogModule, Elmah" preCondition="managedHandler" />
-      <add name="ErrorMail" type="Elmah.ErrorMailModule, Elmah" preCondition="managedHandler" />
-      <add name="ErrorFilter" type="Elmah.ErrorFilterModule, Elmah" preCondition="managedHandler" />
+      <add name="ErrorLog" type="Elmah.ErrorLogModule, Elmah" preCondition="managedHandler"/>
+      <add name="ErrorMail" type="Elmah.ErrorMailModule, Elmah" preCondition="managedHandler"/>
+      <add name="ErrorFilter" type="Elmah.ErrorFilterModule, Elmah" preCondition="managedHandler"/>
     </modules>
     <handlers>
-      <remove name="ExtensionlessUrlHandler-ISAPI-4.0_32bit" />
-      <remove name="ExtensionlessUrlHandler-ISAPI-4.0_64bit" />
-      <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
-      <add name="ExtensionlessUrlHandler-ISAPI-4.0_32bit" path="*." verb="GET,HEAD,POST,DEBUG,PUT,DELETE,PATCH,OPTIONS" modules="IsapiModule" scriptProcessor="%windir%\Microsoft.NET\Framework\v4.0.30319\aspnet_isapi.dll" preCondition="classicMode,runtimeVersionv4.0,bitness32" responseBufferLimit="0" />
-      <add name="ExtensionlessUrlHandler-ISAPI-4.0_64bit" path="*." verb="GET,HEAD,POST,DEBUG,PUT,DELETE,PATCH,OPTIONS" modules="IsapiModule" scriptProcessor="%windir%\Microsoft.NET\Framework64\v4.0.30319\aspnet_isapi.dll" preCondition="classicMode,runtimeVersionv4.0,bitness64" responseBufferLimit="0" />
-      <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="GET,HEAD,POST,DEBUG,PUT,DELETE,PATCH,OPTIONS" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
+      <remove name="ExtensionlessUrlHandler-ISAPI-4.0_32bit"/>
+      <remove name="ExtensionlessUrlHandler-ISAPI-4.0_64bit"/>
+      <remove name="ExtensionlessUrlHandler-Integrated-4.0"/>
+      <add name="ExtensionlessUrlHandler-ISAPI-4.0_32bit" path="*." verb="GET,HEAD,POST,DEBUG,PUT,DELETE,PATCH,OPTIONS" modules="IsapiModule" scriptProcessor="%windir%\Microsoft.NET\Framework\v4.0.30319\aspnet_isapi.dll" preCondition="classicMode,runtimeVersionv4.0,bitness32" responseBufferLimit="0"/>
+      <add name="ExtensionlessUrlHandler-ISAPI-4.0_64bit" path="*." verb="GET,HEAD,POST,DEBUG,PUT,DELETE,PATCH,OPTIONS" modules="IsapiModule" scriptProcessor="%windir%\Microsoft.NET\Framework64\v4.0.30319\aspnet_isapi.dll" preCondition="classicMode,runtimeVersionv4.0,bitness64" responseBufferLimit="0"/>
+      <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="GET,HEAD,POST,DEBUG,PUT,DELETE,PATCH,OPTIONS" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0"/>
     </handlers>
   </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
-        <assemblyIdentity name="System.Web.Helpers" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="1.0.0.0-2.0.0.0" newVersion="2.0.0.0" />
+        <assemblyIdentity name="System.Web.Helpers" publicKeyToken="31bf3856ad364e35"/>
+        <bindingRedirect oldVersion="1.0.0.0-2.0.0.0" newVersion="2.0.0.0"/>
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="0.0.0.0-4.0.0.0" newVersion="4.0.0.0" />
+        <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35"/>
+        <bindingRedirect oldVersion="0.0.0.0-4.0.0.0" newVersion="4.0.0.0"/>
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="System.Web.WebPages" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="1.0.0.0-2.0.0.0" newVersion="2.0.0.0" />
+        <assemblyIdentity name="System.Web.WebPages" publicKeyToken="31bf3856ad364e35"/>
+        <bindingRedirect oldVersion="1.0.0.0-2.0.0.0" newVersion="2.0.0.0"/>
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="WebGrease" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="0.0.0.0-1.5.2.14234" newVersion="1.5.2.14234" />
+        <assemblyIdentity name="WebGrease" publicKeyToken="31bf3856ad364e35"/>
+        <bindingRedirect oldVersion="0.0.0.0-1.5.2.14234" newVersion="1.5.2.14234"/>
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="Antlr3.Runtime" publicKeyToken="eb42632606e9261f" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-3.5.0.2" newVersion="3.5.0.2" />
+        <assemblyIdentity name="Antlr3.Runtime" publicKeyToken="eb42632606e9261f" culture="neutral"/>
+        <bindingRedirect oldVersion="0.0.0.0-3.5.0.2" newVersion="3.5.0.2"/>
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-13.0.0.0" newVersion="13.0.0.0" />
+        <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral"/>
+        <bindingRedirect oldVersion="0.0.0.0-13.0.0.0" newVersion="13.0.0.0"/>
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
-        <parameter value="v11.0" />
+        <parameter value="v11.0"/>
       </parameters>
     </defaultConnectionFactory>
   </entityFramework>
